--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,11 +30,11 @@ jobs:
         distribution: 'temurin'
     - name: Build artifacts
       run: ./gradlew build
-    - name: Upload a Build Artifact
+    - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
          # Artifact name
-         name: artifact.jar
+         name: smpcore-${{ github.sha }}.jar
          # A file, directory or wildcard pattern that describes what to upload
          path: ./build/libs
          # The desired behavior if no files are found using the provided path.
