--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.2
       with:
          # Artifact name
-         name: smpcore-${{ github.sha }}.jar
+         name: smpcore-artifact
          # A file, directory or wildcard pattern that describes what to upload
          path: ./build/libs
          # The desired behavior if no files are found using the provided path.
