--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -2,3 +2,8 @@ name: SmpCore
 version: '${version}'
 main: me.creonc.smpcore.SmpCore
 api-version: '1.20'
+
+commands:
+  selectclass:
+    description: "todo"
+    usage: "/selectclass <Class name>"
