--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -5,5 +5,6 @@ api-version: '1.20'
 
 commands:
   selectclass:
-    description: "todo"
     usage: "/selectclass <Class name>"
+    description: "todo"
+    aliases: [class]
