--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: SmpCore
-version: '1.1-SNAPSHOT'
+version: '0.1.4'
 main: me.creonc.smpcore.SmpCore
 api-version: '1.20'
+author: CreonC
 
 commands:
   selectclass:
