Remove deprecated api, and fix plugin, remove unused import

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,6 @@ commands:
   selectclasscancel:
     description: Cancel the selected class.
     usage: /selectclass cancel
+  selectclassunselect:
+    description: Unselect the current class.
+    usage: /selectclass unselect
